css/collapse.css
.block-collapsing-book-navigation ul.nav {
    display: block;
    padding-left: 30px;
}

.block-collapsing-book-navigation li.nav-item {
    list-style-type: none;
    margin: 0.5rem 0;
}

.block-collapsing-book-navigation a.nav-link {
    padding: 0.5rem;
}

.block-collapsing-book-navigation a.nav-link.active {
    font-weight: 600;
}

.block-collapsing-book-navigation a.nav-link:hover {
    text-decoration: underline;
}

.block-collapsing-book-navigation .fa-caret-right, .block-collapsing-book-navigation .fa-caret-down {
    transform: scale(1.25);
}

.block-collapsing-book-navigation .fa-circle-o {
    transform: scale(0.50);
    margin-left: 1px;
}

.block-collapsing-book-navigation .fa-chevron-right {
    color: #0275D8;
}

.block-collapsing-book-navigation .icon {
    margin-left: -30px;
}

.block-collapsing-book-navigation .toggle-icon:hover {
    text-decoration: none;
}

.block-collapsing-book-navigation .nav-list {
    margin-left: -1.5rem;
}

